Fix alignment of boss idols in the battle interface.
Closes #81.

--- a/style.less
+++ b/style.less
@@ -653,6 +653,14 @@ body.in-battle {
           .sprite {
             height: 50vw;
             max-height: 42vh !important;
+            width: 100%;
+
+            img {
+              position: static;
+              text-align: center;
+              height: 100%;
+              margin: 0 -50%;
+            }
           }
 
           &::after {
